add subtitle, add Contact api (model, view and route), update schema 1.0.3
