# youmath/api/serializers.py
@@ -2,39 +2,48 @@ from rest_framework.serializers import (ModelSerializer,
                                         SerializerMethodField,
                                         IntegerField)
 
-from materials.models import Section, SubSection, Article
+from materials.models import Article, Contact, Section, SubSection
 
 
 class ArticleNestedSerializer(ModelSerializer):
     """Вложенный сериализатор для отображения работ."""
     class Meta:
         model = Article
-        fields = ('id', 'title', 'subtitle', 'description', 'read_counter')
+        fields = ('id', 'title', 'subtitle')
 
-
-# class SubSectionNestedSerializer(ModelSerializer):
-#     """Вложенный сериализатор для отображения подразделов."""
-#     class Meta:
-#         model = SubSection
-#         fields = ('id', 'title', 'description', 'read_counter')
-
-
-class SubSectionSerializer(ModelSerializer):
-    """Сериализатор для отображения подразделов."""
-    articles_count = IntegerField()
-
+class SectionNestedSerializer(ModelSerializer):
+    """Вложенный сериализатор для отображения разделов."""
     class Meta:
         model = SubSection
-        fields = ('id', 'title', 'description', 'read_counter',
-                  'articles_count')
+        fields = ('id', 'title', 'subtitle')
+
+class SubSectionNestedSerializer(ModelSerializer):
+    """Вложенный сериализатор для отображения подразделов."""
+    class Meta:
+        model = SubSection
+        fields = ('id', 'title', 'subtitle')
 
 
 class ArticleSerializer(ModelSerializer):
     """Сериализатор для отображения работ."""
+    section = SectionNestedSerializer()
+    subsection = SubSectionNestedSerializer()
+
     class Meta:
         model = Article
         fields = ('id', 'title', 'subtitle', 'description', 'read_counter',
-                  'file')
+                  'file', 'section', 'subsection')
+
+
+class SubSectionSerializer(ModelSerializer):
+    """Сериализатор для отображения подразделов."""
+    section = SectionNestedSerializer()
+    articles_count = IntegerField()
+
+    class Meta:
+        model = SubSection
+        fields = ('id', 'title', 'subtitle', 'description', 'read_counter',
+                  'articles_count', 'section')
 
 
 class SectionListSerializer(ModelSerializer):
@@ -45,7 +54,7 @@ class SectionListSerializer(ModelSerializer):
 
     class Meta:
         model = Section
-        fields = ('id', 'title', 'author', 'description', 'read_counter',
+        fields = ('id', 'title', 'subtitle', 'description', 'read_counter',
                   'subsection_exist', 'subsections_count', 'articles_count')
 
     def get_subsection_exist(self, obj):
@@ -63,10 +72,10 @@ class SectionDetailSerializer(ModelSerializer):
 
     class Meta:
         model = Section
-        fields = ('id', 'title', 'author', 'description', 'read_counter',
+        fields = ('id', 'title', 'subtitle', 'description', 'read_counter',
                   'subsection_exist', 'subsections_count', 'articles_count',
                   'subsections', 'articles')
-        read_only_fields = ('id', 'title', 'author', 'description',
+        read_only_fields = ('id', 'title', 'subtitle', 'description',
                             'read_counter',
                             'subsection_exist', 'subsections_count',
                             'articles_count', 'subsections', 'articles')
@@ -75,7 +84,7 @@ class SectionDetailSerializer(ModelSerializer):
         return bool(obj.subsections.count())
 
     def get_subsections(self, obj):
-        return SubSectionSerializer(
+        return SubSectionNestedSerializer(
             obj.subsections.with_counters_annotated(),
             many=True
         ).data
@@ -96,7 +105,7 @@ class PopularSectionSerializer(ModelSerializer):
 
     class Meta:
         model = Section
-        fields = ('id', 'title', 'author', 'description', 'read_counter',
+        fields = ('id', 'title', 'subtitle', 'description', 'read_counter',
                   'subsection_exist', 'subsections_count', 'articles_count',
                   'popular_articles')
 
@@ -109,5 +118,8 @@ class PopularSectionSerializer(ModelSerializer):
             many=True
         ).data
 
+class ContactSerializer(ModelSerializer):
 
-
+    class Meta:
+        model = Contact
+        fields = ('email', 'name', 'message')
