# youmath/static/documentation/openapi-schema.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: Youmath backend API
-  version: 1.0.2
+  version: 1.0.3
   description: Backend API для проекта youmath.ru
 
 
@@ -18,6 +18,8 @@ tags:
     description: Подразделы
   - name: ARTICLES
     description: Работы
+  - name: CONTACT
+    description: Обратная связь
 
 paths:
   /articles/:
@@ -154,16 +156,16 @@ paths:
                     type: string
                     nullable: true
                     format: uri
-                    example: http://api.example.org/accounts/?offset=400&limit=100
+                    example: https://api.example.org/accounts/?offset=400&limit=100
                   previous:
                     type: string
                     nullable: true
                     format: uri
-                    example: http://api.example.org/accounts/?offset=200&limit=100
+                    example: https://api.example.org/accounts/?offset=200&limit=100
                   results:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Section'
+                      $ref: '#/components/schemas/Section_list'
           description: ''
   /sections/{id}/:
     get:
@@ -183,7 +185,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Section'
+                $ref: '#/components/schemas/Section_detail'
           description: ''
   /sections/popular/:
     get:
@@ -248,16 +250,16 @@ paths:
                     type: string
                     nullable: true
                     format: uri
-                    example: http://api.example.org/accounts/?offset=400&limit=100
+                    example: https://api.example.org/accounts/?offset=400&limit=100
                   previous:
                     type: string
                     nullable: true
                     format: uri
-                    example: http://api.example.org/accounts/?offset=200&limit=100
+                    example: https://api.example.org/accounts/?offset=200&limit=100
                   results:
                     type: array
                     items:
-                      $ref: '#/components/schemas/SubSection_Short'
+                      $ref: '#/components/schemas/Subsection'
           description: ''
   /subsections/{id}/:
     get:
@@ -279,9 +281,30 @@ paths:
               schema:
                 $ref: '#/components/schemas/Subsection'
           description: ''
+  /contact/:
+    post:
+      operationId: api_v1_contact_create
+      summary: Отправить сообщения из формы обратной связи
+      tags:
+        - CONTACT
+      requestBody:
+        description: Отправить новое сообщение
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Contact'
+        required: true
+      responses:
+        '201':
+          description: Сообщение добавлено в базу (HTTP_201_CREATED)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Contact'
+
 components:
   schemas:
-    Article_Short:
+    Article_nested:
       type: object
       description: Информация о работе / статье
       properties:
@@ -297,15 +320,6 @@ components:
           nullable: true
           title: Подзаголовок
           maxLength: 255
-        description:
-          type: string
-          nullable: true
-          title: Описание работы / статьи
-        read_counter:
-          type: integer
-          maximum: 9223372036854775807
-          minimum: 0
-          format: int64
     Article:
       type: object
       description: Информация о работе / статье
@@ -336,7 +350,12 @@ components:
           type: string
           format: uri
           title: Ссылка на файл с материалами работы
-    Section_Short:
+        section:
+          $ref: '#/components/schemas/Section_nested'
+        subsection:
+          $ref: '#/components/schemas/SubSection_nested'
+
+    Section_nested:
       type: object
       description: Информация о разделе.
       properties:
@@ -347,29 +366,12 @@ components:
           type: string
           title: Название
           maxLength: 100
-        author:
+        subtitle:
           type: string
           nullable: true
-          title: Автор
+          title: Подзаголовок
           maxLength: 100
-        description:
-          type: string
-          nullable: true
-          title: Описание
-        read_counter:
-          type: integer
-          maximum: 9223372036854775807
-          minimum: 0
-          format: int64
-          title: Просмотров
-        subsection_exist:
-          type: boolean
-          readOnly: true
-        subsections_count:
-          type: integer
-        articles_count:
-          type: integer
-    Section:
+    Section_list:
       type: object
       description: Информация о разделе со списком подразделов и работ
       properties:
@@ -380,10 +382,10 @@ components:
           type: string
           title: Название
           maxLength: 100
-        author:
+        subtitle:
           type: string
           nullable: true
-          title: Автор
+          title: Подзаголовок
           maxLength: 100
         description:
           type: string
@@ -398,18 +400,57 @@ components:
         subsection_exist:
           type: boolean
           readOnly: true
+          title: Флаг наличия подразделов у данного раздела
         subsections_count:
           type: integer
+          title: Количестов подразделов
         articles_count:
           type: integer
+          title: Количестов работ
+    Section_detail:
+      type: object
+      description: Информация о разделе со списком подразделов и работ
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        title:
+          type: string
+          title: Название
+          maxLength: 100
+        subtitle:
+          type: string
+          nullable: true
+          title: Подзаголовок
+          maxLength: 100
+        description:
+          type: string
+          nullable: true
+          title: Описание
+        read_counter:
+          type: integer
+          maximum: 9223372036854775807
+          minimum: 0
+          format: int64
+          title: Количество просмотров
+        subsection_exist:
+          type: boolean
+          readOnly: true
+          title: Флаг наличия подразделов у данного раздела
+        subsections_count:
+          type: integer
+          title: Количестов подразделов
+        articles_count:
+          type: integer
+          title: Количестов работ
         subsections:
           type: array
           items:
-            $ref: '#/components/schemas/Subsection'
+            $ref: '#/components/schemas/SubSection_nested'
         articles:
           type: array
           items:
-            $ref: '#/components/schemas/Article_Short'
+            $ref: '#/components/schemas/Article_nested'
     Section_Popular:
       type: object
       description: Информация о разделе со списком популярных работ
@@ -417,14 +458,15 @@ components:
         id:
           type: integer
           readOnly: true
+          title: Уникальный идетнтификатор раздела
         title:
           type: string
-          title: Название
+          title: Заголовок
           maxLength: 100
-        author:
+        subtitle:
           type: string
           nullable: true
-          title: Автор
+          title: Подзаголовок
           maxLength: 100
         description:
           type: string
@@ -439,35 +481,35 @@ components:
         subsection_exist:
           type: boolean
           readOnly: true
+          title: Флаг наличия подразделов у данного раздела
         subsections_count:
           type: integer
+          title: Количестов подразделов у данного раздела
         articles_count:
           type: integer
+          title: Количество работ у данного раздела
         popular_articles:
           type: array
+          title: Три популярные работы для отображения на карточке на главной странице
           items:
-            $ref: '#/components/schemas/Article_Short'
-    SubSection_Short:
+            $ref: '#/components/schemas/Article_nested'
+    SubSection_nested:
       type: object
       description: Информация по подразделу
       properties:
         id:
           type: integer
           readOnly: true
+          title: Уникальный идетнтификатор подраздела
         title:
           type: string
-          title: Название
+          title: Заголовок
           maxLength: 100
-        description:
+        subtitle:
           type: string
           nullable: true
-          title: Описание
-        read_counter:
-          type: integer
-          maximum: 9223372036854775807
-          minimum: 0
-          format: int64
-          title: Просмотров
+          title: Подзаголовок
+          maxLength: 100
     Subsection:
       type: object
       description: Информация по подразделу с указанием количества работ
@@ -475,9 +517,15 @@ components:
         id:
           type: integer
           readOnly: true
+          title: Уникальный идетнтификатор подраздела
         title:
           type: string
-          title: Название
+          title: Заголовок
+          maxLength: 100
+        subtitle:
+          type: string
+          nullable: true
+          title: Подзаголовок
           maxLength: 100
         description:
           type: string
@@ -491,3 +539,28 @@ components:
           title: Просмотров
         articles_count:
           type: integer
+          title: Количество работ у данного подраздела
+        section:
+          $ref: '#/components/schemas/Section_nested'
+
+    Contact:
+      required:
+        - email
+      type: object
+      description: Форма обратной связи
+      properties:
+        email:
+          type: string
+          format: email
+          title: Адрес электронной почты
+          maxLength: 255
+          example: user@domein.com
+        name:
+          type: string
+          title: Имя
+          maxLength: 255
+          example: Иван Иванов
+        message:
+          type: string
+          title: Сообщение
+          example: Текст сообщения
